# opw_kinematics

./: .clang-tidy  .github_actions_bionic.yml  .github_actions_focal.yml  .github_actions_windows_melodic.yml  .github_actions_xenial.yml  .run-cpack  .travis.yml  CHANGELOG.rst  CMakeLists.txt  Readme.md  dependencies.rosinstall  package.xml  travis_ci_windows.bat  travis_ci_windows_install.bat
.github/workflows/: bionic_build.yml  clang_format.yml  codecov.yml  focal_build.yml  main.yml  package_debian.yml  package_nuget.yml  windows_2019.yml  windows_melodic_build.yml  xenial_build.yml
cmake/: opw_kinematics-config.cmake.in  opw_kinematics_macros.cmake
include/opw_kinematics/: opw_io.h  opw_kinematics.h  opw_kinematics_impl.h  opw_macros.h  opw_parameters.h  opw_parameters_examples.h  opw_utilities.h
src/: test.cpp
test/: CMakeLists.txt  abb2400_ikfast_tests.cpp  abb_irb2400_manipulator_ikfast_solver.cpp  fk_ik_tests.cpp  ikfast.h  kuka_kr6_test.cpp  sign_corrections_tests.cpp
