<?xml version="1.0"?>
<package format="2">
  <name>opw_kinematics</name>
  <version>0.0.0</version>
  <description>The opw_kinematics package</description>

  <maintainer email="jmeyer@swri.org">Jon Meyer</maintainer>
  <author email="jmeyer@swri.org">Jon Meyer</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
