<?xml version="1.0"?>
<package format="2">
  <name>opw_kinematics</name>
  <version>0.4.3</version>
  <description>
    A simple, analytical inverse kinematic library for industrial robots with parallel bases and
    spherical wrists. Based on the paper "An Analytical Solution of the Inverse Kinematics Problem
    of Industrial Serial Manipulators with an Ortho-parallel Basis and a Spherical Wrist" by
    Mathias Brandstötter, Arthur Angerer, and Michael Hofbaur.
  </description>

  <maintainer email="jmeyer@swri.org">Jon Meyer</maintainer>
  <author email="jmeyer@swri.org">Jon Meyer</author>
  <author email="jeroen.demaeyer@kuleuven.be">Jeroen De Maeyer</author>

  <license>Apache 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <depend>eigen</depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
